Fix wrap 2

--- a/containers/views/landingView/landingView.css
+++ b/containers/views/landingView/landingView.css
@@ -30,7 +30,7 @@
 
 .content-half {
   height: 100%;
-  width: 50%;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
